# mingw-get

./: .gitignore  .hgignore  .hgtags  ChangeLog  Makefile.in  README  VERSION.m4  aclocal.m4  configure.ac  version.c.in
scripts/libexec/: unlink.js
src/: apihook.c  approot.c  approot.h  argwrap.c  argwrap.h  climain.cpp  clistub.c  debug.h  dllhook.cpp  dmh.cpp  dmh.h  dmhcore.cpp  dmhcore.h  dmhguix.cpp  dmhmsgs.c  dmhmsgs.h  getopt.c  guidata.rc  guidmh.cpp  guiexec.cpp  guimain.cpp  guimain.h  guimain.rc  guistub.cpp  guixmld.cpp  keyword.c  manifest.rc  mkpath.c  mkpath.h  pkgbase.h  pkgbind.cpp  pkgdata.cpp  pkgdata.h  pkgdeps.cpp  pkgexec.cpp  pkgfind.cpp  pkghash.c  pkgimpl.h  pkginet.cpp  pkginet.h  (+35 more)
src/pkginfo/: driver.c  pkginfo.h  pkginfo.l
srcdist-doc/: INSTALL.in  NEWS.in  README.in  gendoc.sed.in
xml/: profile.xml  profile.xml.in  setup.xml  setup.xml.in
